--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <p>Unlock incredible experiences and create lasting memories-every detail <br> perfected, every moment unforgettable. Your next great event is just a click away!</p>
                 <div class="buttons">
                     <a href="#">Discover Events</a>
-                    <a href="/signup.html">Create Events</a>
+                    <a href="/#signup.html">Create Events</a>
                 </div>
 
                 <div class="tickets">
